apps-def/simplenodejs/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simplenodejs
spec:
  finalizers:
  - kubernetes
