apps-def/simplenodejs/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplenodeapp
  labels:
    app: simplenodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simplenodeapp
  template:
    metadata:
      labels:
        app: simplenodeapp
    spec:
      containers:
      - name: simplenodeapp
        image: quay.io/jmlafont/simplenodejs:1.1
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
