apps-def/simplenodejs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplenodejs
spec:
  type: NodePort
  ports:
  - port: 80           
    targetPort: 8080   
  selector:                
    app: simplenodeapp
