apps-def/simplenodejs/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simplenodejs
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
# name be patched by kustomize
    weight: 100
  wildcardPolicy: None
